# DiT_ProbabilisticAlgotithm



[build-system]
requires = ['setuptools>=68','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'DiT_ProbabilisticAlgotithm'
version = '0.1.0'
description = 'A probabilistic algorithm for medical image segmentation'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'torch>=2.0.0',
    'numpy>=1.24.0',
    'tqdm>=4.65.0',
]
authors = [
    { name = 'JiinJeon', email = 'jeon.isavelle@gmail.com'},]

[tool.setuptools.packages.find]
where = ['src']
include = ['DiT_ProbabilisticAlgotithm*']

[project.optional-dependencies]
dev = [
    'pytest>=8.0.0',
    'ruff>=0.3',
]